modules/wycs/tests/valid/test_019.wyal
assert:
   forall (int x, int y):
       (x <= y && y <= x) ==> x == y