modules/wycs/tests/invalid/test_010.wyal
assert:
  forall(int x, int y):
    x >= y ==> x == y
